Enable_v1_api and enable_v2_api
Change-Id: I42dc1d88f94e61b9550c5f114ffc1abad25be7ff

--- a/etc/glance-api.conf
+++ b/etc/glance-api.conf
@@ -71,6 +71,11 @@ workers = 0
 # privileges. This only applies when using ContextMiddleware.
 #allow_anonymous_access = False
 
+# Allow deployed API to be configurable. Default value enables both v1 and
+# v2 api.
+enable_v1_api = True
+enable_v2_api = True
+
 # ================= Syslog Options ============================
 
 # Send logs to syslog (/dev/log) instead of to file specified
