--- a/etc/glance-api-paste.ini
+++ b/etc/glance-api-paste.ini
@@ -35,7 +35,7 @@ pipeline = versionnegotiation authtoken context cache rootapp
 pipeline = versionnegotiation authtoken context cache cachemanage rootapp
 
 [composite:rootapp]
-use = egg:Paste#urlmap
+use = glance.api.root_app_factory
 /: apiversions
 /v1: apiv1app
 /v2: apiv2app
