--- a/etc/glance-api.conf
+++ b/etc/glance-api.conf
@@ -1,4 +1,5 @@
 [DEFAULT]
+property_protection_file = etc/property-protections.conf
 # Show more verbose log output (sets INFO log level output)
 #verbose = False
 
