--- a/etc/glance-api.conf
+++ b/etc/glance-api.conf
@@ -1,4 +1,5 @@
 [DEFAULT]
+
 # Show more verbose log output (sets INFO log level output)
 #verbose = False
 
@@ -103,6 +104,8 @@ workers = 1
 # Supported values for the 'disk_format' image attribute
 #disk_formats=ami,ari,aki,vhd,vmdk,raw,qcow2,vdi,iso
 
+#property protections conf
+property_protections_file = etc/property-protections.conf
 
 # ================= Syslog Options ============================
 
