Rule parser for property protections
This patch introduces the way protected properties
will be configured and parsed.

Related to bp api-v2-property-protection

Change-Id: I3d24cacccf3f51b07a4090b8a5db1f2451090762

--- a/etc/glance-api.conf
+++ b/etc/glance-api.conf
@@ -103,6 +103,10 @@ workers = 1
 # Supported values for the 'disk_format' image attribute
 #disk_formats=ami,ari,aki,vhd,vmdk,raw,qcow2,vdi,iso
 
+# Property Protections config file
+# This file contains the rules for property protections and the roles
+# associated with it.
+#property_protections_file = etc/property-protections.conf
 
 # ================= Syslog Options ============================
 
