Property Protection Layer
This patch introduces the property protection layer and the tests
associated with it

Related to bp api-v2-property-protection

Change-Id: Iaf2111bf07377ef6a4c89a621888077cc14be776

--- a/glance/tests/etc/property-protections.conf
+++ b/glance/tests/etc/property-protections.conf
@@ -4,6 +4,36 @@ read = admin,member
 update = admin,member
 delete = admin,member
 
+[spl_create_prop]
+create = admin,spl_role
+read = admin,spl_role
+update = admin
+delete = admin
+
+[spl_read_prop]
+create = admin,spl_role
+read = admin,spl_role
+update = admin
+delete = admin
+
+[spl_read_only_prop]
+create = admin
+read = admin,spl_role
+update = admin
+delete = admin
+
+[spl_update_prop]
+create = admin,spl_role
+read = admin,spl_role
+update = admin,spl_role
+delete = admin
+
+[spl_delete_prop]
+create = admin,spl_role
+read = admin,spl_role
+update = admin
+delete = admin,spl_role
+
 [.*]
 create = admin
 read = admin
