--- a/glance/tests/etc/property-protections.conf
+++ b/glance/tests/etc/property-protections.conf
@@ -34,6 +34,12 @@ read = admin,spl_role
 update = admin
 delete = admin,spl_role
 
+[type]
+create = admin,member
+read = admin,member
+update = admin,member
+delete = admin,member
+
 [.*]
 create = admin
 read = admin
