Using policies for protected properties
Change-Id: I4789ebb2645171280185d2c76138e78d954b5954

--- a/glance/tests/etc/property-protections.conf
+++ b/glance/tests/etc/property-protections.conf
@@ -5,8 +5,8 @@ update = admin,member
 delete = admin,member
 
 [spl_create_prop]
-create = admin,spl_role
-read = admin,spl_role
+create = policy:glance_creator
+read = policy:glance_creator
 update = admin
 delete = admin
 
